--- a/Workshop 1 - Athens/Adv6_MetaAnalysis.Rmd
+++ b/Workshop 1 - Athens/Adv6_MetaAnalysis.Rmd
@@ -1,21 +1,22 @@
 ---
-title: Hands-on training session 6
-subtitle: Meta-analyses with imperfect reference test
+title: "Hands-on training session 6"
+author: "Paolo Eusebi"
 date: "`r Sys.Date()`"
-author:
-  - Paolo Eusebi
-theme: metropolis
-aspectratio: 43
-colortheme: seahorse
-header-includes: 
-  - \input{preamble}
-params:
-  presentation: TRUE
 output:
   beamer_presentation:
-      pandoc_args: ["-t", "beamer"]
-      slide_level: 2
+    pandoc_args:
+    - -t
+    - beamer
+    slide_level: 2
   html_document: default
+  pdf_document: default
+header-includes: \input{preamble}
+colortheme: seahorse
+params:
+  presentation: yes
+subtitle: Meta-analyses with imperfect reference test
+theme: metropolis
+aspectratio: 43
 ---
 
 ```{r rendering, eval=FALSE, include=FALSE}
@@ -41,7 +42,7 @@ runjags.options(silent.jags=TRUE)
 Date/time:
 
   - 20th February 2020
-  - 14.00 - 15.30
+  - 16.00 - 17.00
 
 Teachers:
 
@@ -52,13 +53,13 @@ Teachers:
 
 - Important points from previous sessions
 
-# Session 6a: Meta-Analysis of Diagnostic Test Accuracy Studies
+# Session 6a: Meta-Analysis of Diagnostic Test Accuracy Studies: Perfect Reference Test
 
 ## DTA-MA: perfect reference test
 
 - There is an increasing interest in meta-analyzing data from diagnostic accuracy studies
 
-- The data from the primary studies are summarized in a 2-by-2 cross-tabulation of the dichotomized test result against the true disease status
+- The data from the primary studies are summarized in a 2-by-2 cross-tabulation of the dichotomized test result against the true disease status (assuming we have a perfect reference test)
 
 ```{r, echo=FALSE, message=FALSE}
 library(kableExtra)
@@ -70,6 +71,7 @@ d %>%
   kable() %>%
   kable_styling(full_width = F, font_size = 10)
 ```
+---
 
 ## DTA-MA: perfect reference test
 
@@ -95,6 +97,9 @@ MRI2 %>%
   kable_styling(full_width = F, font_size = 10) 
 ```
 
+---
+
+
 ## DTA-MA: perfect reference test
 
 - Forest plot of sensitivity
@@ -104,6 +109,8 @@ forest(madad(MRI2),
        type = "sens",
        main = "Sensitivity")
 ```
+
+---
 
 ## DTA-MA: perfect reference test
 
@@ -115,6 +122,8 @@ forest(madad(MRI2),
        main = "Specificity")
 ```
 
+---
+
 ## DTA-MA: perfect reference test
 
 - Data points with confidence ellipses on a ROC space
@@ -124,21 +133,88 @@ ROCellipse(MRI2, pch = "")
 points(fpr(MRI2), sens(MRI2))
 ```
 
-## DTA Meta-analysis
+---
 
-Two main framework:
+
+## DTA-MA: perfect reference test
+
+Two main frameworks:
 
 - Hierarchical Summary ROC (Rutter and Gatsonis 2001) 
 
 - Bivariate analysis of sensitivity and specificity (Reitsma et al. 2005)
 
+---
+
 
 ## DTA-MA: bivariate analysis of sensitivity and specificity
 
+
+![Alt text](/Users/paoloeusebi/Desktop/Lavoro/Harmony/Athens2020/AdvTraining6/_presentation/_images/bivariate.png)
+
+---
+
+
+## DTA-MA: hierarchical summary ROC (HSROC)
+
+![Alt text](/Users/paoloeusebi/Desktop/Lavoro/Harmony/Athens2020/AdvTraining6/_presentation/_images/hsroc.png)
+
+---
+
+
+## DTA-MA: bivariate analysis of sensitivity and specificity
+
+Some notation/definitions (no covariates)
+
+$$(\mu_{A_i} \mu_{B_i}) \sim N((\mu_A \mu_B), \Sigma_{AB})$$
+  
+  with 
+
+$$ \Sigma_{AB} = \begin{pmatrix}
+\sigma^2_A    & \sigma^2_{AB} \\\
+\sigma^2_{AB} & \sigma^2_B 
+\end{pmatrix}
+$$
+
+$\mu_{A_i}$ is the logit-transformed sensitivity in study $i$
+$\mu_{B_i}$ is the logit-transformed specificity in study $i$
+
+---
+
+
+## DTA-MA: hierarchical summary ROC (HSROC)
+
+Some notation/definitions (no covariates)
+
+- level I (within study)
+
+$logit(\pi_{ij})=(\theta_i + \alpha_i D_{ij}) \cdot exp(-\beta \cdot D_{ij})$
+
+- level II (between studies)
+
+$\theta_i \sim N(\Theta, \sigma^2_\theta)$
+
+$\alpha_i \sim N(\Lambda, \sigma^2_\alpha)$
+
+$\theta_i$ are cutpoint parameters (or positivity criteria)
+
+$\alpha_i$ are accuracy parameters
+
+$\beta$ is a shape parameter, allowing true-positive and false-positive fractions to increase at different rates as $\theta_i$ increases
+
+---
+
+
+## DTA-MA: bivariate analysis of sensitivity and specificity
+
+Let's run the model with reitsma function (mada R package)
+
 ```{r}
 fit.reitsma <- reitsma(MRI2)
-print(summary(fit.reitsma)[1], digits = 2)
+print(summary(fit.reitsma), digits = 2)
 ```
+
+---
 
 ## DTA-MA: bivariate analysis of sensitivity and specificity
 
@@ -156,6 +232,18 @@ legend("bottomright",
        bty = "n")
 ```
 
+---
+
+
+## DTA-MA: bivariate analysis of sensitivity and specificity
+
+- Where is the summary measure of heterogeneity?
+
+- There is $I^2$ for DTA-MA?
+
+---
+
+
 ## DTA-MA: bivariate analysis of sensitivity and specificity
 
 The function returns also HSROC parameters
@@ -164,22 +252,17 @@ The function returns also HSROC parameters
 print(summary(fit.reitsma)[20], digits = 2)
 ```
 
+---
+
 ## DTA-MA: bivariate analysis of sensitivity and specificity
 
 This is because Bivariate and HSROC approaches are equivalent when covariates are not included (Harbord et al. 2007)
 
-- Parameter estimates from either model can be used to produce a summary operating
-point, an SROC curve, confidence regions, or prediction regions. 
+- Parameter estimates from either model can be used to produce a summary operating point, an SROC curve, confidence regions, or prediction regions. 
 
 - The choice between these parameterizations depends partly on the degrees of and reasons for between-study heterogeneity and the treshold effect.
 
-## DTA-MA: bivariate analysis of sensitivity and specificity
-
-![Alt text](/Users/paoloeusebi/Desktop/Lavoro/Harmony/Athens2020/DTA Meta-analysis/images/bivariate.png)
-
-## DTA-MA: hierarchical summary ROC (HSROC)
-
-![Alt text](/Users/paoloeusebi/Desktop/Lavoro/Harmony/Athens2020/DTA Meta-analysis/images/hsroc.png)
+---
 
 
 ## DTA-MA: hierarchical summary ROC (HSROC)
@@ -193,28 +276,115 @@ HSROC(data = MRI,
 
 HSROCSummary(data = MRI,
              burn_in = 1000,
-             Thin = 2,
              print_plot = T)
 ```
+---
 
 
 ## DTA-MA: hierarchical summary ROC (HSROC)
 
 - The HSROC package allows to run multiple chains
 
+- A single call to the function HSROCSummary will summarize all chains (3 in our example)
+
 ```{r, eval=FALSE, echo=TRUE}
+HSROC(data = MRI,
+      iter.num = 5000,
+      init = init,
+      chain = dir.chain1)
+
 HSROCSummary(data = MRI,
              burn_in = 1000,
-             Thin = 2,
              print_plot = T, 
              chain = list(dir.chain1, dir.chain2, dir.chain3))
 ```
 
-A single call to the function HSROCSummary will summarize all chains (3 in our example).
+---
+
+## DTA-MA: imperfect reference test(s)
+
+Why?
+
+- Ignoring the imperfect nature of the reference may result in biased estimates of pooled sensitivity and specificity of the test under evaluation
+
+---
+
+## DTA-MA: imperfect reference test(s)
+
+How?
+
+- Multivariate generalized linear mixed model (MGLMM)
+
+- Hierarchical summary receiver operating characteristic (HSROC)
+
+- Exact relations between the parameters of these models can be provided.
+
+- But some submodels of the MGLMM do not have corresponding equivalent submodels of the HSROC model, and vice versa.
+
+---
+
+
+## DTA-MA: HSROC for imperfect reference test(s)
+
+Dendukuri et al. Biometrics. 2012
+
+- The data from the primary studies are summarized in a 2-by-2 cross-tabulation of the index test ($T_1$) result against the imperfect refernce ($T_2$)
+
+```{r, echo=FALSE, message=FALSE}
+library(kableExtra)
+library(tidyverse)
+d = matrix(c("TP", "FN","FP", "TN"), nrow = 2,
+           dimnames = list(c("T1+","T1-"),c("T2+","T2-")))
+
+d %>%
+  kable() %>%
+  kable_styling(full_width = F, font_size = 10)
+```
+
+The sensitivity and the specificity of the reference test are defined as:
+
+- $S_2 = P(T_2=+|D+)$
+- $C_2 = P(T_2=-|D-)$
+
+---
+
+
+## DTA-MA: discussion
+
+- Comments?
+
+- Questions?
+
+- Ideas?
+
+---
+
+
+## DTA-MA: hierarchical summary ROC (HSROC)
+
+Let's do it with rjags
+
+---
+
 
 ## Exercise 
 
-Fit a HSROC model assuming imperfect reference for the data on Tibsit
+Use Timsit paper data (Prev Vet Med 2016)
 
-Use rjags and HSROC 
+```{r, echo=FALSE}
+brd = data.frame(TP = c(49, 37, 265, 121, 195, 157, 127),
+                 FP = c(53, 1, 196, 42, 60, 29, 157),
+                 FN = c(38, 90, 606, 910, 1395, 1344, 4591),
+                 TN = c(64, 18, 969, 592, 373, 806, 8316))
+brd %>%
+  mutate(StudyID = c("Gardner", "Buhman", "Thompson", "Schneider", "Leach", "Tennant", "Rezac")) %>%
+  dplyr::select(StudyID, TP, FP, FN, TN) %>%
+  kable() %>%
+  kable_styling(full_width = F, font_size = 9) 
+
+```
+
+1. Fit a bivariate model assuming perfect reference with reitsma() in mada
+2. Fit a HSROC model assuming imperfect reference with HSROC() in HSROC
+3. Fit a HSROC model assuming imperfect reference with model definitions in rjags
 
